[package]
name = "spacetimedb_math"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "Common math types and SpacetimeDB integrations for server-side Rust modules."
documentation = "https://docs.rs/spacetimedb_math"
authors = ["onx2"]
keywords = ["math", "spacetimedb", "geometry", "linear-algebra", "gamedev"]
categories = ["mathematics", "game-development"]

[lib]
crate-type = ["rlib"]

[dependencies]
spacetimedb = {version = "1.12"}
serde = { version = "1.0", features = ["derive"], optional = true }
glam = { version = "0.32", optional = true }
nalgebra = { version = "0.34", optional = true }

[features]
default = ["f32", "timing"]
serde = ["dep:serde"]
glam = ["dep:glam"]
nalgebra = ["dep:nalgebra"]
timing = []


# `f32`/`f64` as mutually-exclusive features
f32 = []
f64 = ["nalgebra?/std"]

[package.metadata.docs.rs]
features = ["glam", "nalgebra", "serde"]
